name:                servant-querylist
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nvmd/hs-servant-querylist#readme.md
license:             Apache 2.0
license-file:        LICENSE
author:              Andrew Gibiansky, Sebastian Mandrean, Sergey Kazenyuk
maintainer:          Sergey Kazenyuk <kazenyuk@gmail.com>
copyright:           2016 Andrew Gibiansky
                     2017 Sebastian Mandrean, Sergey Kazenyuk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.API.QueryList
  build-depends:       base >= 4.7 && < 5
                     , text
                     , http-api-data
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nvmd/hs-servant-querylist
